feat: can create & sign in users and devices
